--- a/app/src/main/res/layout/item_faq_question.xml
+++ b/app/src/main/res/layout/item_faq_question.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             tool:text="Sample Question"
+            android:paddingHorizontal="10dp"
             android:textSize="16sp" />
 
         <ImageView
@@ -30,5 +31,21 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/down_b_arrow" />
+
+        <ImageView
+            android:id="@+id/iv_edit"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/pencil"
+            android:visibility="visible"
+            android:layout_marginStart="8dp" />
+
+        <ImageView
+            android:id="@+id/iv_delete"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/delete"
+            android:visibility="visible"
+            android:layout_marginStart="8dp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
