--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="purple2_transparent">#803F47CC</color>
     <color name="grey">#7D7D7D</color>
     <color name="yellow_star">#FFD700</color>
+    <color name="light_grey">#E0E0E0</color>
 </resources>
