--- a/app/src/main/res/layout/dialog_disabled.xml
+++ b/app/src/main/res/layout/dialog_disabled.xml
@@ -23,7 +23,8 @@
         android:fontFamily="@font/poppins_black"
         android:text="@string/warning"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/topLine"/>
 
     <TextView
@@ -33,7 +34,8 @@
         android:fontFamily="@font/poppins_light"
         android:text="@string/clinic_is_not_working_on"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@id/logout"/>
 
     <com.google.android.material.button.MaterialButton
