--- a/app/src/main/res/layout/fragment_b_about_clinic.xml
+++ b/app/src/main/res/layout/fragment_b_about_clinic.xml
@@ -31,8 +31,8 @@
         android:layout_height="0dp"
         android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.11"
-        app:layout_constraintHeight_percent="0.04"
+        app:layout_constraintWidth_percent="0.15"
+        app:layout_constraintHeight_percent="0.05"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="10dp" />
 
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="10dp"
-        android:text="About The Clinic"
+        android:text="@string/about_the_clinic"
         android:textStyle="bold|italic"
         android:textSize="20sp"
         android:textColor="@color/default_pink"
@@ -55,7 +55,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/new_user_location"
-        app:layout_constraintStart_toStartOf="@id/info_container"
+        app:layout_constraintEnd_toEndOf="@id/info_container"
         app:layout_constraintTop_toTopOf="@id/info_container"
         android:layout_margin="30dp"/>
 
@@ -63,36 +63,40 @@
         android:id="@+id/address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/icon_location"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/icon_location"
+        app:layout_constraintStart_toStartOf="parent"
         android:ellipsize="end"
         android:textIsSelectable="true"
         app:layout_constraintTop_toTopOf="@id/icon_location"
         app:layout_constraintBottom_toBottomOf="@id/icon_location"
-        android:text="315 Faisal Main Street - Hassan Mohamed Station - Next to Attijariwafa Bank and Oriental Weavers, Giza, 12553"
+        android:text="٣١٥ شارع فيصل الرئيسي - محطة حسن محمد - بجوار بنك التجاري وفا والنساجون الشرقيون، الجيزة، ١٢٥٥٣"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"/>
 
     <TextView
-        android:id="@+id/money_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintStart_toStartOf="@id/icon_location"
+        android:id="@+id/maps_icon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:layout_constraintEnd_toStartOf="@id/maps"
         app:layout_constraintTop_toBottomOf="@id/icon_location"
         app:layout_constraintBottom_toTopOf="@id/facebook"
         android:layout_marginTop="15dp"
-        android:background="@drawable/money"
-        android:backgroundTint="@color/default_blue"/>
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/google_maps_logo" />
 
     <TextView
+        android:id="@+id/maps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/money_icon"
-        app:layout_constraintBottom_toBottomOf="@id/money_icon"
-        app:layout_constraintStart_toEndOf="@id/money_icon"
-        android:text="@string/price"
-        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="@id/maps_icon"
+        app:layout_constraintBottom_toBottomOf="@id/maps_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="15dp"
+        android:text="للاتجاهات -->"
+        android:textColor="@color/purple"
+        android:textSize="20sp"
         android:textStyle="bold"/>
 
     <TextView
@@ -119,11 +123,21 @@
         android:id="@+id/Instagram"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:background="@drawable/instagram_logo"
-        app:layout_constraintEnd_toStartOf="@id/WhatsApp"
+        android:background="@drawable/insta_logo"
+        app:layout_constraintEnd_toStartOf="@id/youtube"
         app:layout_constraintStart_toEndOf="@id/tikTok"
         app:layout_constraintBottom_toTopOf="@id/book"
         android:layout_marginBottom="20dp"/>
+    
+    <TextView
+        android:id="@+id/youtube"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:layout_constraintEnd_toStartOf="@id/WhatsApp"
+        app:layout_constraintStart_toEndOf="@id/Instagram"
+        app:layout_constraintBottom_toTopOf="@id/book"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/youtube_logo"/>
 
     <TextView
         android:id="@+id/WhatsApp"
@@ -144,7 +158,7 @@
         android:layout_marginBottom="30dp"
         app:cornerRadius="10dp"
         android:backgroundTint="@color/default_blue"
-        android:text="Book An Appointment Now"
+        android:text="@string/book_an_appointment_now"
         android:textSize="15sp"
         android:textAlignment="center"
         android:textStyle="bold"/>
