--- a/app/src/main/res/layout/fragment_b_login.xml
+++ b/app/src/main/res/layout/fragment_b_login.xml
@@ -72,6 +72,7 @@
         android:background="@drawable/text_box"
         android:hint="@string/e_mail"
         android:textColorHint="#878787"
+        android:textDirection="rtl"
         android:inputType="textEmailAddress"
         android:textSize="20sp"
         android:textColor="@color/black"
@@ -84,10 +85,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/baseline_email_24"
-        app:layout_constraintStart_toStartOf="@id/editText"
+        app:layout_constraintEnd_toEndOf="@id/editText"
         app:layout_constraintTop_toTopOf="@id/editText"
         app:layout_constraintBottom_toBottomOf="@id/editText"
-        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         />
     <EditText
         android:id="@+id/editText2"
@@ -96,8 +97,9 @@
         android:layout_margin="17dp"
         android:background="@drawable/text_box"
         android:hint="@string/password"
+        android:inputType="textVisiblePassword"
+        android:textDirection="anyRtl"
         android:textColorHint="#878787"
-        android:inputType="textPassword"
         android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="@+id/editText"
         app:layout_constraintStart_toStartOf="@+id/editText"
@@ -111,20 +113,20 @@
         android:layout_width="25dp"
         android:layout_height="wrap_content"
         android:background="@drawable/show_password"
-        app:layout_constraintEnd_toEndOf="@id/editText2"
+        app:layout_constraintStart_toStartOf="@id/editText2"
         app:layout_constraintTop_toTopOf="@id/editText2"
         app:layout_constraintBottom_toBottomOf="@id/editText2"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
         />
     <TextView
         android:id="@+id/lock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/baseline_lock_24"
-        app:layout_constraintStart_toStartOf="@id/editText2"
+        app:layout_constraintEnd_toEndOf="@id/editText2"
         app:layout_constraintTop_toTopOf="@id/editText2"
         app:layout_constraintBottom_toBottomOf="@id/editText2"
-        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         />
 
     <com.google.android.material.button.MaterialButton
@@ -149,19 +151,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/lock"
+        app:layout_constraintEnd_toStartOf="@id/lock"
         app:layout_constraintTop_toTopOf="@id/editText2"
         app:layout_constraintBottom_toBottomOf="@id/editText2"
-        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/lock"
+        app:layout_constraintEnd_toStartOf="@id/call"
         app:layout_constraintTop_toTopOf="@id/editText"
         app:layout_constraintBottom_toBottomOf="@id/editText"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         />
 
     <TextView
@@ -190,19 +192,19 @@
         android:id="@+id/remember_me"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@+id/editText2"
-        app:layout_constraintStart_toStartOf="@id/editText2"
+        app:layout_constraintEnd_toEndOf="@id/editText2"
         android:outlineAmbientShadowColor="@color/default_pink" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/remember_me"
+        app:layout_constraintEnd_toStartOf="@id/remember_me"
         app:layout_constraintTop_toTopOf="@id/remember_me"
         app:layout_constraintBottom_toBottomOf="@id/remember_me"
         android:text="@string/remember_me"
-        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:textColor="@color/default_pink"/>
 
     <ProgressBar
