--- a/app/src/main/res/layout/fragment_b_register.xml
+++ b/app/src/main/res/layout/fragment_b_register.xml
@@ -81,7 +81,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/text_box"
         android:layout_marginHorizontal="20dp"
-        android:hint="First Name"
+        android:hint="الاسم الاول"
+        android:textDirection="rtl"
         android:paddingHorizontal="50dp"
         app:layout_constraintTop_toBottomOf="@id/newUser"
         app:layout_constraintEnd_toEndOf="@id/container"
@@ -92,19 +93,19 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/name"
-        app:layout_constraintStart_toStartOf="@+id/firstName"
+        app:layout_constraintEnd_toEndOf="@+id/firstName"
         app:layout_constraintTop_toTopOf="@id/firstName"
         app:layout_constraintBottom_toBottomOf="@id/firstName"
-        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/firstNameIcon"
+        app:layout_constraintEnd_toStartOf="@id/firstNameIcon"
         app:layout_constraintTop_toTopOf="@id/firstName"
         app:layout_constraintBottom_toBottomOf="@id/firstName"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         />
     <EditText
         android:id="@+id/lastName"
@@ -112,7 +113,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/text_box"
         android:layout_marginHorizontal="20dp"
-        android:hint="Last Name"
+        android:hint="الاسم الاخير"
         android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="@id/container"
         app:layout_constraintStart_toStartOf="@id/container"
@@ -123,52 +124,19 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/name"
-        app:layout_constraintStart_toStartOf="@+id/lastName"
+        app:layout_constraintEnd_toEndOf="@+id/lastName"
         app:layout_constraintTop_toTopOf="@id/lastName"
         app:layout_constraintBottom_toBottomOf="@id/lastName"
-        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/lastNameIcon"
+        app:layout_constraintEnd_toStartOf="@id/lastNameIcon"
         app:layout_constraintTop_toTopOf="@id/lastNameIcon"
         app:layout_constraintBottom_toBottomOf="@id/lastNameIcon"
-        android:layout_marginStart="8dp"
-        />
-
-    <EditText
-        android:id="@+id/age"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/text_box"
-        android:hint="Age"
-        android:paddingHorizontal="50dp"
-        app:layout_constraintEnd_toEndOf="@id/container"
-        app:layout_constraintStart_toStartOf="@id/container"
-        app:layout_constraintTop_toBottomOf="@id/lastName"
-        />
-    <TextView
-        android:id="@+id/ageIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/age"
-        app:layout_constraintStart_toStartOf="@id/age"
-        app:layout_constraintTop_toTopOf="@id/age"
-        app:layout_constraintBottom_toBottomOf="@id/age"
-        android:layout_marginStart="10dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/ageIcon"
-        app:layout_constraintTop_toTopOf="@id/ageIcon"
-        app:layout_constraintBottom_toBottomOf="@id/ageIcon"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         />
 
     <EditText
@@ -178,31 +146,32 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/text_box"
-        android:hint="Phone Number"
+        android:hint="رقم التيليفون"
+        android:textDirection="rtl"
         android:inputType="number"
         android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="@id/container"
         app:layout_constraintStart_toStartOf="@id/container"
-        app:layout_constraintTop_toBottomOf="@id/age"
+        app:layout_constraintTop_toBottomOf="@id/lastName"
         />
     <TextView
         android:id="@+id/call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/phone"
-        app:layout_constraintStart_toStartOf="@id/phone"
+        app:layout_constraintEnd_toEndOf="@id/phone"
         app:layout_constraintTop_toTopOf="@id/phone"
         app:layout_constraintBottom_toBottomOf="@id/phone"
-        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/call"
+        app:layout_constraintEnd_toStartOf="@id/call"
         app:layout_constraintTop_toTopOf="@id/call"
         app:layout_constraintBottom_toBottomOf="@id/call"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         />
     <EditText
         android:id="@+id/email"
@@ -211,7 +180,8 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/text_box"
-        android:hint="E-mail"
+        android:hint="@string/e_mail"
+        android:textDirection="rtl"
         android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="@id/container"
         app:layout_constraintStart_toStartOf="@id/container"
@@ -222,52 +192,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/baseline_email_24"
-        app:layout_constraintStart_toStartOf="@id/email"
+        app:layout_constraintEnd_toEndOf="@id/email"
         app:layout_constraintTop_toTopOf="@id/email"
         app:layout_constraintBottom_toBottomOf="@id/email"
-        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/emailIcon"
+        app:layout_constraintEnd_toStartOf="@id/emailIcon"
         app:layout_constraintTop_toTopOf="@id/emailIcon"
         app:layout_constraintBottom_toBottomOf="@id/emailIcon"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         />
-    <EditText
-        android:id="@+id/address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/text_box"
-        android:hint="Address"
-        android:paddingHorizontal="50dp"
-        app:layout_constraintEnd_toEndOf="@id/container"
-        app:layout_constraintStart_toStartOf="@id/container"
-        app:layout_constraintTop_toBottomOf="@id/email"
-        />
-    <TextView
-        android:id="@+id/addressIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/new_user_location"
-        app:layout_constraintStart_toStartOf="@id/address"
-        app:layout_constraintTop_toTopOf="@id/address"
-        app:layout_constraintBottom_toBottomOf="@id/address"
-        android:layout_marginStart="10dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/addressIcon"
-        app:layout_constraintTop_toTopOf="@id/addressIcon"
-        app:layout_constraintBottom_toBottomOf="@id/addressIcon"
-        android:layout_marginStart="8dp"
-        />
+
     <EditText
         android:id="@+id/password"
         android:layout_width="0dp"
@@ -275,12 +214,13 @@
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/text_box"
-        android:hint="Password"
-        android:inputType="textPassword"
+        android:hint="@string/password"
+        android:textDirection="rtl"
+        android:inputType="textVisiblePassword"
         android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="@id/container"
         app:layout_constraintStart_toStartOf="@id/container"
-        app:layout_constraintTop_toBottomOf="@+id/address"
+        app:layout_constraintTop_toBottomOf="@+id/email"
         />
 
     <TextView
@@ -288,35 +228,82 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/show_password"
-        app:layout_constraintEnd_toEndOf="@id/password"
-        app:layout_constraintTop_toTopOf="@id/password"
-        app:layout_constraintBottom_toBottomOf="@id/password"
-        android:layout_marginEnd="10dp"
-        />
-    <TextView
-        android:id="@+id/lock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/baseline_lock_24"
         app:layout_constraintStart_toStartOf="@id/password"
         app:layout_constraintTop_toTopOf="@id/password"
         app:layout_constraintBottom_toBottomOf="@id/password"
         android:layout_marginStart="10dp"
         />
     <TextView
+        android:id="@+id/lock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/baseline_lock_24"
+        app:layout_constraintEnd_toEndOf="@id/password"
+        app:layout_constraintTop_toTopOf="@id/password"
+        app:layout_constraintBottom_toBottomOf="@id/password"
+        android:layout_marginEnd="10dp"
+        />
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/cursor"
-        app:layout_constraintStart_toEndOf="@id/lock"
+        app:layout_constraintEnd_toStartOf="@id/lock"
         app:layout_constraintTop_toTopOf="@id/lock"
         app:layout_constraintBottom_toBottomOf="@id/lock"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         />
+
+    <EditText
+        android:id="@+id/confirm_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/text_box"
+        android:hint="@string/confirm_password"
+        android:textDirection="rtl"
+        android:inputType="textVisiblePassword"
+        android:paddingHorizontal="50dp"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        />
+
+    <TextView
+        android:id="@+id/confirm_show_pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/show_password"
+        app:layout_constraintStart_toStartOf="@id/confirm_password"
+        app:layout_constraintTop_toTopOf="@id/confirm_password"
+        app:layout_constraintBottom_toBottomOf="@id/confirm_password"
+        android:layout_marginStart="10dp"
+        />
+    <TextView
+        android:id="@+id/confirm_lock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/baseline_lock_24"
+        app:layout_constraintEnd_toEndOf="@id/confirm_password"
+        app:layout_constraintTop_toTopOf="@id/confirm_password"
+        app:layout_constraintBottom_toBottomOf="@id/confirm_password"
+        android:layout_marginEnd="10dp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/cursor"
+        app:layout_constraintEnd_toStartOf="@id/confirm_lock"
+        app:layout_constraintTop_toTopOf="@id/confirm_lock"
+        app:layout_constraintBottom_toBottomOf="@id/confirm_lock"
+        android:layout_marginEnd="8dp"
+        />
+
     <ImageButton
         android:id="@+id/btnRegister"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/login_button"
         app:layout_constraintEnd_toEndOf="@id/container"
