--- a/app/src/main/res/layout/fragment_doctor_new_common_question.xml
+++ b/app/src/main/res/layout/fragment_doctor_new_common_question.xml
@@ -55,8 +55,8 @@
         android:textSize="20sp"
         android:textColor="@color/default_pink"
         app:layout_constraintTop_toBottomOf="@id/line"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="50dp"/>
 
     <EditText
@@ -67,6 +67,7 @@
         app:layout_constraintTop_toBottomOf="@id/question"
         android:layout_marginHorizontal="20dp"
         android:hint="@string/enter_the_question"
+        android:textDirection="rtl"
         android:textColorHint="@color/grey"
         android:paddingHorizontal="10dp"
         android:layout_marginTop="10dp"
@@ -76,7 +77,7 @@
         android:id="@+id/answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/question"
+        app:layout_constraintEnd_toEndOf="@id/question"
         app:layout_constraintTop_toBottomOf="@id/edit_question"
         android:layout_marginTop="20dp"
         android:text="@string/answer"
@@ -91,6 +92,7 @@
         android:background="@drawable/text_box"
         android:layout_marginHorizontal="20dp"
         android:hint="@string/enter_the_answer"
+        android:textDirection="rtl"
         android:textColorHint="@color/grey"
         android:paddingHorizontal="10dp"
         android:layout_marginTop="10dp"
