--- a/app/src/main/res/layout/fragment_patient_home_2.xml
+++ b/app/src/main/res/layout/fragment_patient_home_2.xml
@@ -38,7 +38,7 @@
         android:id="@+id/hi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hi, "
+        android:text="@string/hi"
         android:textSize="20sp"
         android:textColor="#878787"
         android:textStyle="bold|italic"
@@ -63,7 +63,7 @@
         android:id="@+id/location"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@drawable/new_user_location"
+        android:background="@drawable/google_maps_logo"
         app:layout_constraintEnd_toEndOf="@id/welcome"
         app:layout_constraintTop_toTopOf="@id/type"
         app:layout_constraintBottom_toBottomOf="@id/type"
@@ -71,15 +71,23 @@
 
     <TextView
         android:id="@+id/WhatsApp"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@drawable/whatsapp_logo"
         app:layout_constraintEnd_toStartOf="@id/location"
         app:layout_constraintTop_toTopOf="@id/location"
         app:layout_constraintBottom_toBottomOf="@id/location"
-        android:layout_marginEnd="10dp"
-        app:backgroundTint="@color/default_blue"/>
+        android:layout_marginEnd="10dp" />
 
+    <TextView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/money"
+        app:layout_constraintEnd_toStartOf="@id/WhatsApp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/location"
+        android:backgroundTint="@color/purple"
+        app:layout_constraintBottom_toBottomOf="@id/location"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -147,7 +155,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Your Bookings"
+                    android:text="@string/your_bookings"
                     android:textSize="25dp"
                     android:textColor="@color/black"
                     app:layout_constraintEnd_toEndOf="@id/my_bookings"
@@ -180,7 +188,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Common Questions ?"
+                    android:text="@string/common_questions"
                     android:textSize="20dp"
                     android:textColor="@color/black"
                     app:layout_constraintEnd_toEndOf="@id/common_ques"
@@ -191,6 +199,13 @@
                     android:textStyle="bold"
                     android:fontFamily="@font/poppins_black"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp">
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
