--- a/app/src/main/res/layout/fragment_patient_slot_selection.xml
+++ b/app/src/main/res/layout/fragment_patient_slot_selection.xml
@@ -75,15 +75,48 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/arrowBack" />
+    
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/evening_slots"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintWidth_percent="0.47"
+        app:layout_constraintTop_toBottomOf="@id/tv_selected_date"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="10dp"
+        app:backgroundTint="@color/light_grey"
+        android:text="فترات مسائيه"
+        android:textColor="@color/black"
+        app:cornerRadius="40dp"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/morning_slots"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintWidth_percent="0.47"
+        app:layout_constraintTop_toBottomOf="@id/tv_selected_date"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="10dp"
+        app:cornerRadius="40dp"
+        android:text="فترات صباحية"
+        app:backgroundTint="@color/light_grey"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_slots"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="30dp"
         android:layout_marginHorizontal="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_selected_date"
+        app:layout_constraintTop_toBottomOf="@id/evening_slots"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_confirm" />
