--- a/app/src/main/res/layout/item_booked_doctor.xml
+++ b/app/src/main/res/layout/item_booked_doctor.xml
@@ -16,17 +16,17 @@
         android:layout_width="match_parent"
         android:background="@drawable/text_box"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="15dp">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/patient_name"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:textColor="@color/default_pink"
             android:textStyle="bold"/>
 
@@ -35,8 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Sama Ahmed"
-            app:layout_constraintStart_toEndOf="@id/name"
-            android:layout_marginStart="10dp"
+            app:layout_constraintEnd_toStartOf="@id/name"
+            android:layout_marginEnd="10dp"
             android:textColor="@color/default_blue"
             app:layout_constraintTop_toTopOf="@id/name"
             app:layout_constraintBottom_toBottomOf="@id/name"/>
@@ -45,11 +45,11 @@
             android:id="@+id/phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Phone NO. :- "
+            android:text="رقم التيليفون: "
             app:layout_constraintTop_toBottomOf="@id/name"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:textColor="@color/default_pink"
             android:textStyle="bold"/>
 
@@ -59,8 +59,8 @@
             android:layout_height="wrap_content"
             tools:text="01028681426"
             android:textColor="@color/default_blue"
-            app:layout_constraintStart_toEndOf="@id/phone"
-            android:layout_marginStart="10dp"
+            app:layout_constraintEnd_toStartOf="@id/name"
+            android:layout_marginEnd="10dp"
             app:layout_constraintTop_toTopOf="@id/phone"
             app:layout_constraintBottom_toBottomOf="@id/phone"/>
 
@@ -73,22 +73,78 @@
             android:textSize="15sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/phone"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/phone" />
 
         <TextView
             android:id="@+id/slot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text=": 10:00 AM"
+            tools:text="10:00 AM: "
             android:padding="5dp"
             android:textStyle="bold"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@id/date"
+            app:layout_constraintEnd_toStartOf="@id/date"
             app:layout_constraintTop_toTopOf="@id/date"
             app:layout_constraintBottom_toBottomOf="@id/date"/>
 
+        <TextView
+            android:id="@+id/note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ملحوظات :"
+            app:layout_constraintTop_toBottomOf="@id/date"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/default_pink"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/note_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="تالاؤناسلاراهصغهرالااه"
+            android:textColor="@color/default_blue"
+            app:layout_constraintEnd_toStartOf="@id/note"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toTopOf="@id/note"
+            app:layout_constraintBottom_toBottomOf="@id/note"/>
+
+        <ImageView
+            android:id="@+id/final_state"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/done"
+            android:layout_margin="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/buttonsLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/note"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <Button
+                android:id="@+id/btnAttended"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Attended"
+                android:layout_marginHorizontal="15dp" />
+
+            <Button
+                android:id="@+id/btnNotAttended"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Not Attended" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
