--- a/app/src/main/res/layout/item_case.xml
+++ b/app/src/main/res/layout/item_case.xml
@@ -20,7 +20,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/mother_64"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
         <TextView
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/name"
-            app:layout_constraintStart_toEndOf="@id/img"
+            app:layout_constraintEnd_toStartOf="@id/img"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="20dp"
             />
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/phone"
-            app:layout_constraintStart_toEndOf="@id/img"
+            app:layout_constraintEnd_toStartOf="@id/img"
             app:layout_constraintTop_toBottomOf="@id/person"
             android:layout_margin="20dp"/>
         <TextView
@@ -46,18 +46,18 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             tools:text="Sama Ahmed"
-            app:layout_constraintStart_toEndOf="@id/person"
+            app:layout_constraintEnd_toStartOf="@id/person"
             app:layout_constraintTop_toTopOf="@id/person"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginEnd="10dp"/>
         <TextView
             android:id="@+id/phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
             tools:text="01028681426"
-            app:layout_constraintStart_toEndOf="@id/calender"
+            app:layout_constraintEnd_toStartOf="@id/calender"
             app:layout_constraintTop_toTopOf="@id/calender"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginEnd="10dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
