--- a/app/src/main/res/layout/item_feedback.xml
+++ b/app/src/main/res/layout/item_feedback.xml
@@ -18,7 +18,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="20dp"
             android:layout_marginVertical="15dp"
             android:src="@drawable/profile"/>
@@ -27,10 +27,10 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/pic"
+            app:layout_constraintEnd_toStartOf="@id/pic"
             app:layout_constraintTop_toTopOf="@id/pic"
             app:layout_constraintBottom_toBottomOf="@id/pic"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             tool:text="Sama Ahmed"
             android:fontFamily="@font/rubik_variable_font_wight"
             android:textStyle="bold|italic"
@@ -42,7 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/pic"
-            app:layout_constraintStart_toStartOf="@id/name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tool:text="The Doctor is perfect"
             android:padding="12dp"
             android:textColor="@color/default_blue"
@@ -52,12 +53,11 @@
             android:id="@+id/delete"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/pic"
             android:background="@drawable/delete"
             android:layout_marginEnd="12dp"
-            android:visibility="gone"/>
+            />
 
         <ImageView
             android:id="@+id/star1"
