--- a/app/src/main/res/layout/fragment_patient_hospital_bag.xml
+++ b/app/src/main/res/layout/fragment_patient_hospital_bag.xml
@@ -53,7 +53,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_mom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:elevation="10dp"
         app:layout_constraintTop_toBottomOf="@id/about"
         android:layout_marginTop="10dp"
@@ -102,13 +102,25 @@
 
     </androidx.cardview.widget.CardView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_mom_needs"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/card_mom"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card_baby"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:elevation="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/card_mom"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/rv_mom_needs"
         android:layout_marginHorizontal="10dp"
         app:cardCornerRadius="20dp">
 
@@ -152,5 +164,17 @@
                 android:fontFamily="@font/poppins_black"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_baby_needs"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/card_baby"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
